# catch2023

./: .gitignore  LICENSE  README.md
arm_lib/: CMakeLists.txt  package.xml
arm_lib/src/: arm.cpp
auto_cmd_gen/: package.xml  readme.md  setup.cfg  setup.py
auto_cmd_gen/auto_cmd_gen/: auto_cmd_gen.py  state.py
auto_cmd_gen/config/: blue.csv
auto_cmd_generator/: CMakeLists.txt  package.xml  readme.md
auto_cmd_generator/config/: param.yaml
auto_cmd_generator/src/: auto_cmd_generator.cpp  auto_cmd_generator.hpp  state.cpp  state.hpp
auto_cmd_generator_catch/: package.xml  setup.cfg  setup.py
catch2023_interfaces/: CMakeLists.txt  package.xml
catch2023_interfaces/msg/: JoyCommand.msg
converter_principal/: CMakeLists.txt  package.xml  readme.md
converter_principal/src/: converter.cpp  converter.hpp  rail_catch.cpp  rail_catch.hpp
core_catch/: CMakeLists.txt  package.xml
core_catch/src/: catch_tf.hpp  core.cpp  core.hpp  core_catch.cpp  core_catch.hpp
device_catch/: CMakeLists.txt  package.xml  readme.md
device_catch/src/: device.cpp
dummy_robot_catch/: CMakeLists.txt  package.xml
dummy_robot_catch/src/: dummy_robot.cpp  dummy_robot.hpp
gui_catch/: package.xml  setup.cfg  setup.py
gui_principal/: package.xml  setup.cfg  setup.py
gui_principal/gui_principal/: gui_principal.py
joy_controller_catch/: CMakeLists.txt  package.xml  readme.md
joy_controller_catch/launch/: joy_controller.launch.py
joy_controller_catch/src/: button_manager.cpp  button_manager.hpp  joy_controller_catch.cpp  joy_controller_catch.hpp
launch_catch/: CMakeLists.txt  package.xml
launch_catch/config/: config.yaml  rogilink.yaml
launch_catch/launch/: principal_launch.py  rogilink_launch.py  simulate_launch.py
launch_catch/src/: launch_catch.cpp  launch_catch.hpp
launcher_catch/: package.xml  readme.md  setup.cfg  setup.py
launcher_catch/launcher_catch/: launcher_catch.py
monitor_catch/: CMakeLists.txt  package.xml
monitor_catch/launch/: monitor_launch.py
monitor_catch/rviz2/: robot_arm.rviz
monitor_catch/src/: monitor.cpp  monitor.hpp
monitor_catch/urdf/: robot_arm.urdf  sample.urdf
principal_interfaces/: CMakeLists.txt  package.xml
rviz_monitor_catch/: CMakeLists.txt  package.xml
(+11 files in other folders)
