<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auto_cmd_generator_catch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="84272166+long-paddy-field@users.noreply.github.com">yugoosada</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>principal_interfaces</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
